--- a/app/templates/main/login.html
+++ b/app/templates/main/login.html
@@ -15,6 +15,8 @@
 {% endblock %}
 
 {% block content %}
+    <script src = "{{ url_for('static', filename='login_check.js') }}"></script>
+
     <div class="login-container">
         <div class="login">
             <form action="/login" method="post" id="login-form">
