--- a/app/templates/main/login_forgot.html
+++ b/app/templates/main/login_forgot.html
@@ -18,6 +18,10 @@
     <div class="login-container">
         <div class="login">
             <form action="/forgot_password" method="post" id="login-form">
+
+                <label for="username">Логин:</label>
+                <input type="text" id="username" name="username" placeholder="Введите ваш логин" required autofocus>
+
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" placeholder="Введите ваш e-mail" required autofocus>
 
@@ -25,6 +29,38 @@
             </form>
         </div>
     </div>
+
+    <script>
+        document.getElementById("login-form").addEventListener("submit", function(e) { 
+            e.preventDefault(); 
+            const form = document.getElementById("login-form"); 
+            const formData = new FormData(form); 
+            const requestData = {
+                login: formData.get('login'),
+                email: formData.get('email')
+            };
+            fetch('/doctor/forgot/search', { 
+                method: 'POST', 
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(requestData)
+            }) 
+            .then(response => response.json()) 
+            .then(data => { 
+                if (data.message) { 
+                    alert(data.message);
+                    window.location.href = '/login'
+                } else { 
+                    const password = data.password; 
+                    alert('Ваш текущий пароль: ' + password); 
+                    form.action = '/login'; 
+                    form.submit(); 
+                } 
+            }) 
+            .catch(error => console.error(error)); 
+        });
+    </script>
 {% endblock %}
 
 {% block footer %}
