--- a/app/templates/main/login_forgot.html
+++ b/app/templates/main/login_forgot.html
@@ -53,9 +53,8 @@
                     window.location.href = '/login'
                 } else { 
                     const password = data.password; 
-                    alert('Ваш текущий пароль: ' + password); 
-                    form.action = '/login'; 
-                    form.submit(); 
+                    alert('Ваш текущий пароль: ' + password);
+                    window.location.href = '/login'
                 } 
             }) 
             .catch(error => console.error(error)); 
