--- a/app/templates/main/login.html
+++ b/app/templates/main/login.html
@@ -26,7 +26,7 @@ document.addEventListener('DOMContentLoaded', function() {
             var password = document.getElementById('password').value;
 
             var xhr = new XMLHttpRequest();
-            xhr.open('POST', '/doctor/search');
+            xhr.open('POST', '/doctor/search'); // Изменено на '/doctor/search'
             xhr.setRequestHeader('Content-Type', 'application/json');
             xhr.onload = function() {
                 if (xhr.status === 200) {
