--- a/app/static/css/list_styles.css
+++ b/app/static/css/list_styles.css
@@ -160,7 +160,7 @@ html, body {
     background-color: #f5f5f5;
     padding: 15px;
     border-radius: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     grid-column: 1 / -1;
     width: 100%;
     border-collapse: collapse;
@@ -210,11 +210,11 @@ html, body {
     background-color: #2c3e50;
     color: white;
     text-align: center;
-    padding: 5px 20px;
+    padding: 5px 0;
 }
 
 .footer span {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
 }
 
