--- a/app/templates/main/main.html
+++ b/app/templates/main/main.html
@@ -14,11 +14,11 @@
             <div style="display: inline-flex; align-items: center;">
                 <div class="header-contacts"
                      style="background-color: rgba(0, 51, 75, 0.4); padding: 10px; margin-right: 10px;">
-                    <p>Адрес: г. Москва, уl. Ленина, d.15</p>
-                    <p>Телефон: 8(800)123-45-67</p>
-                    <p>Email: <a href="mailto:hello@donormirror.ru" style="display: inline;">hello@donormirror.ru</a>
+                    <p>Адрес: г. Рязань, ул. Гагарина, 59/1</p>
+                    <p>Телефон: 8(915)606-54-33</p>
+                    <p>Email: <a href="mailto:matvej.averkin@yandex.ru" style="display: inline;">matvej.averkin@yandex.ru</a>
                     </p>
-                    <p>ВК: <a href="https://vk.com/tenebrisvk" style="display: inline;">autor</a></p>
+                    <p>ВК: <a href="https://vk.com/tenebrisvk" style="display: inline;">Аверкин М.Е.</a></p>
                 </div>
 
                 <div style="display: flex; align-items: center; justify-content: center; transform: translateY(-19%);">
@@ -47,7 +47,7 @@
         <div class="content-container">
             <div class="content" style="overflow-y: scroll; height: 100vh;">
                 <h1>DonorMirror</h1>
-                <p>Open source & easy-to-use blood donor information system(HIS) for all healthcare organisations.</p>
+                <p>Простая в использовании система информации о донорах крови (ИСД) с открытым исходным кодом для всех организаций здравоохранения.</p>
 
                 <h2>Предметная область</h2>
                 <p>Исследование и разработка информационной системы учета доноров крови.</p>
