Фиксирую изменения главного окна доктора, финальные правки

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -277,6 +277,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <table class="donors-list">
     <thead>
     <tr>
+        <th>Больница прикрепления</th>
         <th>Паспорт</th>
         <th>ФИО</th>
         <th>Пол</th>
