--- a/app/static/css/main_styles.css
+++ b/app/static/css/main_styles.css
@@ -91,14 +91,15 @@ a:hover {
 }
 
 .header {
-    background-image: linear-gradient(to right, #2c3e50, #3498db);
+    background-image: linear-gradient(to right, #2c3e50, #2c3e50);
     color: white;
-    text-align: center;
-    padding: 10px 0;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    border-bottom: 2px solid #1a5276;
+    padding: 10px 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .header h1 {
@@ -129,27 +130,19 @@ a:hover {
 }
 
 
-/* обработка <footer> */
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #2c3e50;
-    color: white;
-    text-align: center;
-    padding: 0px 5px;
+  background-color: #2c3e50;
+  color: white;
+  padding: 15px 10px;
+  text-align: center;
+  font-size: 14px;
+  border-top: 1px solid #1a5276;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 footer .footer-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-}
-
-footer .footer-container span {
-    margin-bottom: 10px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 /* form styles */
@@ -235,4 +228,51 @@ button[disabled] {
     background-color: #ccc;
     color: #777;
     cursor: not-allowed;
+}
+
+.left-group {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.navigation {
+    display: flex;
+    gap: 10px;
+}
+
+.navigation button {
+    padding: 8px 16px;
+    background-color: #3498db;
+    color: white;
+    border: 1px solid #ecf0f1;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.navigation button:hover {
+    background-color: #2980b9;
+    transform: scale(1.05);
+}
+
+.action-buttons {
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  flex: 1;
+  padding: 40px;
 }
